# seosoyoung-plugins

./: .gitignore  LICENSE  README.md  node_modules  pyproject.toml
.docs/: ARCHITECTURE.8972cc8.md
scripts/: migrate_om_to_json.py
src/seosoyoung_plugins/: __init__.py  soulstream_client.py
src/seosoyoung_plugins/channel_observer/: __init__.py  atom_store.py  collector.py  intervention.py  observer.py  pipeline.py  pipeline_lock.py  plugin.py  prompts.py  remiel_context.py  scheduler.py  store.py
src/seosoyoung_plugins/memory/: __init__.py  context_builder.py  intervention.py  migration.py  observation_pipeline.py  observer.py  plugin.py  promoter.py  prompt_loader.py  prompts.py  reflector.py  store.py  token_counter.py
src/seosoyoung_plugins/sns_sourcing/: __init__.py  (+8 more)
tests/: __init__.py  conftest.py  test_async_runner.py  test_caller_info_signature_regression.py  test_package.py
tests/channel_observer/: conftest.py  test_atom_store.py  test_channel_observer_plugin.py  test_extract_utterances.py  test_format_recent_context.py  test_format_thread_buffers.py  test_intervene_gate.py  test_pipeline_judge_guard.py  test_pipeline_lock.py  test_recent_messages_count.py  test_remiel_context.py  test_scheduler_lock.py
tests/memory/: test_channel_intervention.py  test_channel_message_collector.py  test_channel_observer.py  test_channel_pipeline.py  test_channel_prompts.py  test_channel_scheduler.py  test_channel_store.py  test_memory_store.py  test_memory_store_json.py  test_observation_pipeline.py  test_observer.py  test_promoter.py  test_prompt_loader.py  test_reflector.py  test_token_counter.py
tests/sns_sourcing/: test_collector.py  test_permalink.py  test_plugin.py  test_scheduler.py  test_service.py  test_session.py  test_store.py
tests/translate/: test_detector.py  test_glossary.py  test_slack_escape.py  test_translate_plugin.py  test_translator.py
tests/trello/: conftest.py  helpers.py  test_list_runner.py  test_trello_plugin.py  test_trello_plugin_reaction_caller_info.py  test_watcher.py
(+33 files in other folders)
