[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seosoyoung-plugins"
version = "0.1.0"
description = "Plugin implementations for seosoyoung slackbot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dorothy", email = "dorothy@eiaserinnys.dev" }
]
keywords = ["slack", "bot", "plugin", "seosoyoung"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # seosoyoung plugin_sdk
    # TODO: Package plugin_sdk separately for proper distribution
    # For now, using pythonpath in pytest config for local development

    # Common dependencies
    "pyyaml>=6.0.0",
    "requests>=2.31.0",

    # Translate plugin
    "rapidfuzz>=3.0.0",
    "kiwipiepy>=0.18.0",

    # Memory/Observer plugins
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "filelock>=3.13.0",

    # Trello plugin
    "py-trello>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/eiaserinnys/seosoyoung-plugins"
Repository = "https://github.com/eiaserinnys/seosoyoung-plugins.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/seosoyoung_plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "../seosoyoung/src"]

[tool.coverage.run]
source = ["src/seosoyoung_plugins"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
